# ArcHManga

./: .gitignore  README.md  package-lock.json  package.json
apps/api/: .env.example  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/routes/: generation.py  models.py  projects.py
apps/api/app/core/: config.py
apps/api/app/schemas/: base.py  comic.py  generation.py
apps/api/app/services/: catalog_service.py  character_consistency.py  comfyui_service.py  mock_data.py  orchestrator.py  qwen_service.py  workflow_builder.py  workflow_introspection.py  workflow_validator.py
apps/api/archmanga_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/storage/: characters.json  scene-memories.json  wf-72f9f22e.json  wf-786984e3.json
apps/api/storage/workflows/: wf-9480b1e7.json
apps/web/: next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/editor/: comic-editor.tsx  director-console.tsx  inspector.tsx  page-canvas.tsx  sidebar.tsx
apps/web/src/components/providers/: query-provider.tsx
apps/web/src/lib/: api.ts  character-consistency.ts  default-data.ts  mask-presets.ts  prompt-preview.ts  quick-repair.ts  use-generation.ts
apps/web/src/store/: editor-store.ts
